--- a/src/main/resources/static/css/mainui.css
+++ b/src/main/resources/static/css/mainui.css
@@ -10,7 +10,6 @@
         display: flex;
         flex-flow: row;
     }
-
     .gallery {
       display: flex;
       flex-wrap: wrap;
@@ -27,6 +26,7 @@
        overflow: hidden;
        flex-basis: 250px;
        font-family: sans-serif;
+       margin: 6px;
      }
      .basicDocument.selectable:hover {
        border: 1px solid black;
@@ -37,16 +37,32 @@
     }
     .basicDocument h1 {
       font-size: 16px;
-      margin: 4px;
       border-bottom: 2px solid black;
+      overflow: hidden;
+	  text-overflow: ellipsis;
+	  white-space: nowrap;
+	  padding-top: 3px;
+    }
+    .basicDocument .tagHolder {
+      margin-bottom: 6px;
+      margin-top: 2px;
+      margin-left: 10px;
+      font-size: 14px;
+      overflow: hidden;
+	  text-overflow: ellipsis;
+	  white-space: nowrap;  
     }
     .basicDocument .postedBy {
       font-size: 11px;
+      padding: 2px;
     }
     .basicDocument .body {
       font-size: 13px;
      }
-
+	.basicDocument .gridImage {
+		display: block;
+		margin: 0 auto;
+	}
 
      /**
 
@@ -87,6 +103,7 @@
      }
      .searchNavigation{
  	    width: 100%;
+ 	    font-size: 24px;
       }
       .previousNavigation{
         float: left;
@@ -357,7 +374,6 @@ html {
 	font-family: Arial, Geneva, Verdana, sans-serif;
 	font-size: 1.3em;
 	line-height: 1.42em;
-	margin-bottom: 12px;
 	font-weight: normal;
 	color: #656565;
 }
