add play/stop for autopolling

--- a/src/main/resources/static/css/mainui.css
+++ b/src/main/resources/static/css/mainui.css
@@ -240,7 +240,14 @@
      .tagButton {
        background: url('/images/tag.png') no-repeat left center;
        background-size: 25px 25px;
-
+     }
+     .playButton {
+       background: url('/images/play.png') no-repeat left center;
+       background-size: 25px 25px;
+     }
+     .stopButton {
+       background: url('/images/stop.png') no-repeat left center;
+       background-size: 25px 25px;
      }
      .tagButton.selected {
        border: 3px solid black;
