update ui on tag, tagging includes hover state

--- a/src/main/resources/static/css/mainui.css
+++ b/src/main/resources/static/css/mainui.css
@@ -29,7 +29,10 @@
        margin: 6px;
      }
      .basicDocument.selectable:hover {
-       border: 1px solid black;
+       /*border: 1px solid black;*/
+     }
+     .basicDocument.candidate {
+     	border: 3px solid blue;
      }
 
     .basicDocument.selected {
