--- a/src/main/resources/static/css/mainui.css
+++ b/src/main/resources/static/css/mainui.css
@@ -100,6 +100,14 @@
 	    height:80%;
 	    transform: translate(-50%, -50%);
      }
+  	.settings{
+	    background-color:#ddd;
+	    position: fixed;
+	    padding: 2em;
+	    left: 50%;
+	    top: 50%;
+	    transform: translate(-50%, -50%);
+     }
 
      .tagText{
        width:250px;
