--- a/src/main/resources/static/css/mainui.css
+++ b/src/main/resources/static/css/mainui.css
@@ -72,7 +72,12 @@
      Editor Forms
 
      */
-
+	.inputMsgBody{
+		width:100%;
+	}
+	.formSection{
+		width:100%;
+	}
       .basicDocumentEdit{
  	    background-color:#ddd;
  	    position: fixed;
@@ -82,6 +87,8 @@
  	    width:80%;
  	    height:80%;
  	    transform: translate(-50%, -50%);
+ 	    display:flex;
+ 	    flex-direction:column;
       }
 
 
